<resources>
    <string name="app_name">EmployeesFragmentsApp</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus mi a facilisis
        consectetur. Duis tincidunt posuere lacus, vel blandit est. Nam a posuere nunc.
    </string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="image">Employee image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
